--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,12 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+diff = "0.1"
 home = "0.5.3"
 itertools = "0.9"
 pico-args = "0.3.4"
 rayon = "1.4.1"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 tempdir = "0.3"
 walkdir = "2.3.1"
