--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
 edition = "2018"
-name = "rustc_testrunner"
+name = "icemaker"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
