--- a/.github/workflows/icemaker.yml
+++ b/.github/workflows/icemaker.yml
@@ -15,6 +15,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin
+          key: ${{ runner.os }}
       - uses: actions-rs/install@v0.1
         with:
           crate: rustup-toolchain-install-master
