--- a/.github/workflows/icemaker.yml
+++ b/.github/workflows/icemaker.yml
@@ -45,15 +45,15 @@ jobs:
         run: icemaker --silent
         working-directory: glacier/fixed/
 
-      - name: clone rustc
-        run: git clone https://github.com/rust-lang/rust rust --depth 10
-      - name: copy rustc log
-        run: cp -f rust_errors.json rust/errors.json || true
-      - name: run icemaker on rustc
-        run: icemaker --silent
-        working-directory: rust/
-      # save the logs
-      - name: save logs
-        run: |
-          cp -f glacier/fixed/errors.json glacier_errors.json
-          cp -f rust/errors.json rust_errors.json
+#      - name: clone rustc
+#        run: git clone https://github.com/rust-lang/rust rust --depth 10
+#      - name: copy rustc log
+#        run: cp -f rust_errors.json rust/errors.json || true
+#      - name: run icemaker on rustc
+#        run: icemaker --silent
+#        working-directory: rust/
+#      # save the logs
+#      - name: save logs
+#        run: |
+#          cp -f glacier/fixed/errors.json glacier_errors.json
+#          cp -f rust/errors.json rust_errors.json
