--- a/.github/workflows/icemaker.yml
+++ b/.github/workflows/icemaker.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           path: |
             ~/.cargo/bin
-            glacier_errros.json
+            glacier/fixed/glacier_errros.json
             rust_errors.json
           key: ${{ runner.os }}
       - name: install rustup-toolchain-install-master
@@ -38,13 +38,19 @@ jobs:
         run: cargo install --path . --force
 
       - name: clone glacier
-        run: git clone https://github.com/rust-lang/glacier glacier --depth 10
-      - name: copy glacier log
-        run: cp -f glacier_errors.json glacier/fixed/errors.json || true
+        run: |
+          mkdir -p glacier
+          cd glacier
+          git init
+          git remote add origin https://github.com/rust-lang/glacier
+          git fetch --depth 5
+          git checkout -t origin/master
+
+      #      - name: copy glacier log
+      #        run: cp -f glacier_errors.json glacier/fixed/errors.json || true
       - name: run icemaker on glacier
         run: icemaker --silent
         working-directory: glacier/fixed/
-
 #      - name: clone rustc
 #        run: git clone https://github.com/rust-lang/rust rust --depth 10
 #      - name: copy rustc log
