--- a/.github/workflows/icemaker.yml
+++ b/.github/workflows/icemaker.yml
@@ -22,6 +22,7 @@ jobs:
             ~/glacier/fixed/errros.json
           #            rust_errors.json
           key: cache
+          restore-keys: cache
       - name: install rustup-toolchain-install-master
         # don't throw an error if it is already installed
         run: cargo install rustup-toolchain-install-master || true
