--- a/.github/workflows/icemaker.yml
+++ b/.github/workflows/icemaker.yml
@@ -18,11 +18,11 @@ jobs:
       - uses: actions/cache@v2
         with:
           path: |
-            ~/.cargo/bin
-            ~/glacier/fixed/errros.json
+            .cargo/bin
+            glacier/fixed/errros.json
           #            rust_errors.json
-          key: cache
-          restore-keys: cache
+          key: ${{ runner.os }}-errors
+      #          restore-keys: cache
       - name: install rustup-toolchain-install-master
         # don't throw an error if it is already installed
         run: cargo install rustup-toolchain-install-master || true
