--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,10 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempdir = "0.3"
 walkdir = "2.3.1"
+
+[profile.release]
+#inherits="release"
+lto = true
+incremental = false
+debug = false
+codegen-units = 1 
