--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ version = "0.1.0"
 diff = "0.1"
 home = "0.5.3"
 itertools = "0.10"
+markov = "1.1"
 pico-args = "0.4"
 rayon = "1.5.0"
 serde = {version = "1.0", features = ["derive"]}
