--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ itertools = "0.10"
 markov = "1.1"
 pico-args = "0.4"
 rayon = "1.5.0"
+regex = "*"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempdir = "0.3"
