--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ version = "0.1.0"
 diff = "0.1"
 home = "0.5.3"
 itertools = "0.10"
+lazy_static = "1.4"
 markov = "1.1"
 pico-args = "0.4"
 rayon = "1.5.0"
-regex = "*"
+regex = "1.5"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempdir = "0.3"
