add faster release build profile (faster compile with more cgus)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,3 +32,10 @@ lto = true
 [features]
 # run without systemd-run 
 ci = []
+
+[profile.fast]
+codegen-units = 4
+debug = false
+incremental = false
+inherits = "release"
+lto = "thin"
