--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
 edition = "2021"
 name = "icemaker"
+license = "MIT/Apache-2.0"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
