--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempdir = "0.3"
 walkdir = "2.3.1"
+once_cell = "1.13"
 
 [profile.release]
 #inherits="release"
