--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde_json = "1.0"
 tempdir = "0.3"
 walkdir = "2.3.1"
 once_cell = "1.13"
+colored = "2.0.0"
 
 [profile.release]
 #inherits="release"
