--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,4 +18,4 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-        run: cargo check --all-targets
+      - run: cargo check --all-targets
