--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,20 +1,22 @@
 [package]
 authors = ["Matthias Krüger <matthias.krueger@famsik.de>"]
 edition = "2021"
-name = "icemaker"
 license = "MIT/Apache-2.0"
+name = "icemaker"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 clap = {version = "4.0.4", features = ["derive"]}
+colored = "2.0.0"
 ctrlc = "3.2.1"
 diff = "0.1"
 home = "0.5.3"
 itertools = "0.10"
 lazy_static = "1.4"
 markov = "1.1"
+once_cell = "1.13"
 rand = "0.8"
 rayon = "1.5.0"
 regex = "1.5"
@@ -22,8 +24,6 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 tempdir = "0.3"
 walkdir = "2.3.1"
-once_cell = "1.13"
-colored = "2.0.0"
 
 [profile.release]
 #inherits="release"
@@ -33,7 +33,7 @@ incremental = false
 lto = "thin"
 
 [features]
-# run without systemd-run 
+# run without prlimit
 ci = []
 
 #faster compile with not as good performance (more cgus) for manual testing
