--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,11 @@ rayon = "1.5.0"
 regex = "1.5"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+sha2 = "0.10"
 tempdir = "0.3"
+tree-sitter = "0.20"
+tree-sitter-rust = "0.20"
+tree-splicer = "0.1.0"
 walkdir = "2.3.1"
 
 [profile.release]
