--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = {version = "0.4.31", default-features = false, features = ["alloc", "std", "clock"]}
 clap = {version = "4.0.4", features = ["derive"]}
 colored = "2.0.0"
 ctrlc = "3.2.1"
