--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 tempdir = "0.3"
 tree-sitter = "0.20"
-tree-sitter-rust = "0.20"
+tree-sitter-rust =  { git = "https://github.com/tree-sitter/tree-sitter-rust", branch = "master" }
 tree-splicer = "0.4.0"
 walkdir = "2.3.1"
 
